--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "ejs": "^2.3.1",
     "express": "^4.12.3",
-    "morgan": "^1.5.2"
+    "morgan": "^1.5.2",
+    "socket.io": "^1.3.5",
+    "twit": "^1.1.20"
   }
 }
